--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "friendsofphp/php-cs-fixer": "^3.8",
         "nunomaduro/collision": "^6.0",
         "nunomaduro/larastan": "^2.0.1",
+        "orchestra/canvas": "^7.1",
         "orchestra/testbench": "^7.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
@@ -31,12 +32,11 @@
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
-        "spatie/laravel-ray": "^1.26"
+        "spatie/laravel-ray": "^1.29"
     },
     "autoload": {
         "psr-4": {
-            "FmTod\\LaravelTabulator\\": "src",
-            "FmTod\\LaravelTabulator\\Database\\Factories\\": "database/factories"
+            "FmTod\\LaravelTabulator\\": "src"
         }
     },
     "autoload-dev": {
@@ -60,10 +60,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "FmTod\\LaravelTabulator\\LaravelTabulatorServiceProvider"
+              "TabulatorServiceProvider"
             ],
             "aliases": {
-                "LaravelTabulator": "FmTod\\LaravelTabulator\\Facades\\LaravelTabulator"
+                "LaravelTabulator": "FmTod\\LaravelTabulator\\Facades\\Tabulator"
             }
         }
     },
