--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-        laravel: [9.*, 8.*]
+        laravel: [9.*]
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 9.*
@@ -21,11 +21,11 @@ jobs:
             php: 8.1
             larastan: 2.*
             collision: 6.*
-          - laravel: 8.*
-            testbench: 6.*
-            php: 7.4
-            larastan: 1.*
-            collision: 5.*
+#          - laravel: 8.*
+#            testbench: 6.*
+#            php: 7.4
+#            larastan: 1.*
+#            collision: 5.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
