--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,20 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Install PNPM
+        uses: pnpm/action-setup@v2
+        id: pnpm-install
+        with:
+          version: 8
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
+          cache: pnpm
+
+      - name: Install Dependencies
+        run: pnpm install
 
       - name: Create release
         run: npx semantic-release
