--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "prepare": "husky install"
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +12,9 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
-    "husky": "^8.0.3"
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/github": "^9.0.3",
+    "husky": "^8.0.3",
+    "semantic-release": "^21.0.7"
   }
 }
