--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -1,8 +1,8 @@
-name: run-tests
+name: '🧪 Test'
 
 on:
-  pull_request:
-    branches: [main]
+  - workflow_call
+  - workflow_dispatch
 
 jobs:
   test:
