--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,30 +12,16 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  lint:
+    name: '🧹 Lint'
+    uses: fmtod/laravel-tabulator/.github/workflows/_lint.yml@main
+    secrets: inherit
+
+  test:
+    name: '🧪 Test'
+    uses: fmtod/laravel-tabulator/.github/workflows/_test.yml@main
+
   release:
-    name: 'Create Release'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Install PNPM
-        uses: pnpm/action-setup@v2
-        id: pnpm-install
-        with:
-          version: 8
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-          cache: pnpm
-
-      - name: Install Dependencies
-        run: pnpm install
-
-      - name: Create release
-        run: npx semantic-release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+    name: '🧪 Test'
+    needs: [test, lint]
+    uses: fmtod/laravel-tabulator/.github/workflows/_release.yml@main
