--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         laravel: [9.*]
         stability: [prefer-lowest, prefer-stable]
         include:
