--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -11,14 +11,14 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        laravel: [9.*]
+        laravel: [10.*]
+        php: [8.1, 8.2]
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 9.*
-            testbench: 7.*
-            php: 8.1
+            testbench: 8.*
             larastan: 2.*
-            collision: 6.*
+            collision: 7.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
