--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -6,11 +6,10 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest]
         stability: [prefer-lowest, prefer-stable]
         laravel: [10.*]
         php: [8.1, 8.2]
